# amprobe

./: BUILD.bazel  README.md  WORKSPACE  alert.sh  alertmanager.yaml  deps.bzl  main.go  prometheus.yaml
alert/: BUILD.bazel  alert.go
config/: BUILD.bazel  config.go
hook/: BUILD.bazel  hook.go
metrics/: BUILD.bazel  metrics.go
probe/: BUILD.bazel  probe.go
