load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tmhdgsn/amprobe
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/tmhdgsn/amprobe",
    visibility = ["//visibility:private"],
    deps = [
        "//hook:go_default_library",
        "//probe:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
    ],
)

go_binary(
    name = "amprobe",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
