load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/tmhdgsn/amprobe/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_prometheus//pkg/rulefmt:go_default_library"],
)
